<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>realsense_examples</name>
  <version>2.0.5</version>
  <description>ROS2 RealSense Package Exampless</description>
  <maintainer email="xiaojun.huang@intel.com">Xiaojun Huang</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <depend>realsense_ros</depend>
  <depend>realsense_node</depend>
  <depend>realsense2</depend>
  <depend>realsense_msgs</depend>

  <exec_depend>launch_ros</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
